--- a/sound/soc/msm/qdsp6v2/q6adm.c.save.1
+++ b/sound/soc/msm/qdsp6v2/q6adm.c.save.1
@@ -104,6 +104,8 @@ struct adm_ctl {
 
 	int native_mode;
 	u32 copp_token;
+	int lsm_port_id;
+for new ADM LSM cal types
 };
 
 static struct adm_ctl			this_adm;
@@ -2115,13 +2117,17 @@ static int get_cal_path(int path)
 		return TX_DEVICE;
 }
 
+void adm_set_lsm_port_id(int port_id)
+{
+	this_adm.lsm_port_id = port_id;
+}
+
 static void send_adm_cal(int port_id, int copp_idx, int path, int perf_mode,
-			 int app_type, int acdb_id, int sample_rate,
-			 int passthr_mode)
+			 int app_type, int acdb_id, int sample_rate)
 {
 	pr_debug("%s: port id 0x%x copp_idx %d\n", __func__, port_id, copp_idx);
 
-	if (passthr_mode != LISTEN)
+	if (port_id != this_adm.lsm_port_id)
 		send_adm_cal_type(ADM_AUDPROC_CAL, path, port_id, copp_idx,
 				perf_mode, app_type, acdb_id, sample_rate);
 	else
@@ -3329,8 +3335,7 @@ int adm_matrix_map(int path, struct route_payload payload_map, int perf_mode,
 				     get_cal_path(path), perf_mode,
 				     payload_map.app_type[i],
 				     payload_map.acdb_dev_id[i],
-				     payload_map.sample_rate[i],
-				     passthr_mode);
+				     payload_map.sample_rate[i]);
 			/* ADM COPP calibration is already sent */
 			clear_bit(ADM_STATUS_CALIBRATION_REQUIRED,
 				(void *)&this_adm.copp.
